package donaciones.domain.eventos;

public interface CambioDeEstadoEnDonacion {
    void notificarAInvolucrados();
}
